--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>Gina Veal Circuit Clerk</title>
+		<style>
+		  
+		  body {
+			  background-image: url(https://www.gina4circuitclerk.org/Union_County_Mississippi_Courthouse.jpg); 
+			  background-repeat: no-repeat;
+			  background-position: center;
+			  background-size: cover;
+		  }
+		 </style>
+	</head>
 
-Hello again.
+	<body>
+	  Site under construction.
+		
+	</body>
+</html>
+
